[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/logo.png" type="Texture" id=1]
[ext_resource path="res://Start.gd" type="Script" id=2]

[node name="Start" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Logo" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Logo"]
position = Vector2( 336, 192 )
scale = Vector2( 0.769397, 0.752246 )
texture = ExtResource( 1 )

[node name="Start Button" type="Button" parent="."]
margin_left = 96.0
margin_top = 480.0
margin_right = 240.0
margin_bottom = 528.0
action_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings Button" type="Button" parent="."]
margin_left = 264.0
margin_top = 480.0
margin_right = 408.0
margin_bottom = 528.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit Button" type="Button" parent="."]
margin_left = 432.0
margin_top = 480.0
margin_right = 576.0
margin_bottom = 528.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="PopupPanel" parent="."]
margin_left = 336.0
margin_top = 144.0
margin_right = 720.0
margin_bottom = 336.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Settings"]
margin_left = 4.0
margin_top = 4.0
margin_right = 380.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsExit" type="HBoxContainer" parent="Settings/Control"]
margin_left = 360.0
margin_right = 384.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitSettings" type="Button" parent="Settings/Control/SettingsExit"]
margin_right = 19.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsHeader" type="VBoxContainer" parent="Settings/Control"]
margin_left = 18.0
margin_right = 365.0
margin_bottom = 36.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/Control/SettingsHeader"]
margin_top = 11.0
margin_right = 347.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
uppercase = true

[node name="SettingsText" type="VBoxContainer" parent="Settings/Control"]
margin_left = 24.0
margin_top = 36.0
margin_right = 360.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/Control/SettingsText"]
margin_right = 336.0
margin_bottom = 31.0
text = "theres barely anything to show here, and idk how to make a settings module"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButtons" type="Control" parent="Settings/Control"]
margin_left = 48.0
margin_top = 130.0
margin_right = 105.0
margin_bottom = 166.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsCredits" type="VBoxContainer" parent="Settings/Control/SettingsButtons"]
margin_top = 4.0
margin_right = 57.0
margin_bottom = 26.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Settings/Control/SettingsButtons/SettingsCredits"]
margin_top = 1.0
margin_right = 57.0
margin_bottom = 21.0
text = "Credits"

[node name="SettingsDiscord" type="VBoxContainer" parent="Settings/Control/SettingsButtons"]
margin_left = 180.0
margin_top = 4.0
margin_right = 288.0
margin_bottom = 26.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Settings/Control/SettingsButtons/SettingsDiscord"]
margin_top = 1.0
margin_right = 108.0
margin_bottom = 21.0
text = "Discord Server"

[node name="ExitConfirmation" type="PopupPanel" parent="."]
margin_left = 384.0
margin_top = 144.0
margin_right = 672.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ExitConfirmation"]
margin_left = 4.0
margin_top = 4.0
margin_right = 284.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitConfirmHeader" type="VBoxContainer" parent="ExitConfirmation/Control"]
margin_left = -4.0
margin_right = 284.0
margin_bottom = 21.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ExitConfirmation/Control/ExitConfirmHeader"]
margin_top = 3.0
margin_right = 288.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Warning"
align = 1
uppercase = true

[node name="ExitConfirmText" type="VBoxContainer" parent="ExitConfirmation/Control"]
margin_left = 20.0
margin_top = 32.0
margin_right = 260.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ExitConfirmation/Control/ExitConfirmText"]
margin_right = 240.0
margin_bottom = 14.0
text = "Are you sure that you want to exit?"
align = 1
valign = 1

[node name="ExitConfirm" type="Control" parent="ExitConfirmation/Control"]
margin_left = -4.0
margin_top = 92.0
margin_right = 284.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitConfirmYes" type="VBoxContainer" parent="ExitConfirmation/Control/ExitConfirm"]
margin_left = 36.0
margin_top = 12.0
margin_right = 84.0
margin_bottom = 36.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ExitConfirmation/Control/ExitConfirm/ExitConfirmYes"]
margin_top = 2.0
margin_right = 48.0
margin_bottom = 22.0
text = "Yes"

[node name="ExitConfirmNo" type="VBoxContainer" parent="ExitConfirmation/Control/ExitConfirm"]
margin_left = 204.0
margin_top = 12.0
margin_right = 252.0
margin_bottom = 36.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitNo" type="Button" parent="ExitConfirmation/Control/ExitConfirm/ExitConfirmNo"]
margin_top = 2.0
margin_right = 48.0
margin_bottom = 22.0
text = "No"

[node name="ProfilePanel" type="PopupPanel" parent="."]
margin_left = 288.0
margin_top = 144.0
margin_right = 768.0
margin_bottom = 380.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ProfilePanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 476.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileExit" type="HBoxContainer" parent="ProfilePanel/Control"]
margin_left = 452.0
margin_top = -4.0
margin_right = 475.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileExit"]
margin_right = 19.0
margin_bottom = 24.0
text = "x"

[node name="ProfileLabel" type="VBoxContainer" parent="ProfilePanel/Control"]
margin_left = 66.0
margin_top = -4.0
margin_right = 402.0
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ProfilePanel/Control/ProfileLabel"]
margin_top = 5.0
margin_right = 336.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Profiles"
align = 1
valign = 1
uppercase = true

[node name="ProfileList" type="Control" parent="ProfilePanel/Control"]
margin_left = 66.0
margin_top = 21.0
margin_right = 402.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profile0" type="VBoxContainer" parent="ProfilePanel/Control/ProfileList"]
margin_left = 72.0
margin_top = 12.0
margin_right = 264.0
margin_bottom = 32.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileList/Profile0"]
margin_right = 192.0
margin_bottom = 20.0
toggle_mode = true
text = "(Player One)"

[node name="Profile1" type="VBoxContainer" parent="ProfilePanel/Control/ProfileList"]
margin_left = 72.0
margin_top = 36.0
margin_right = 264.0
margin_bottom = 59.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileList/Profile1"]
margin_top = 1.0
margin_right = 192.0
margin_bottom = 21.0
toggle_mode = true
text = "(Player Two)"

[node name="Profile2" type="VBoxContainer" parent="ProfilePanel/Control/ProfileList"]
margin_left = 72.0
margin_top = 60.0
margin_right = 264.0
margin_bottom = 83.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileList/Profile2"]
margin_top = 1.0
margin_right = 192.0
margin_bottom = 21.0
toggle_mode = true
text = "(Player Three)"

[node name="Profile3" type="VBoxContainer" parent="ProfilePanel/Control/ProfileList"]
margin_left = 72.0
margin_top = 84.0
margin_right = 264.0
margin_bottom = 107.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileList/Profile3"]
margin_top = 1.0
margin_right = 192.0
margin_bottom = 21.0
toggle_mode = true
text = "(Player Four)"

[node name="Profile4" type="VBoxContainer" parent="ProfilePanel/Control/ProfileList"]
margin_left = 72.0
margin_top = 108.0
margin_right = 264.0
margin_bottom = 131.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileList/Profile4"]
margin_top = 1.0
margin_right = 192.0
margin_bottom = 21.0
toggle_mode = true
text = "(Player Five)"

[node name="ProfileMaxWarning" type="VBoxContainer" parent="ProfilePanel/Control"]
margin_left = 20.0
margin_top = 160.0
margin_right = 452.0
margin_bottom = 183.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ProfilePanel/Control/ProfileMaxWarning"]
margin_top = 4.0
margin_right = 432.0
margin_bottom = 18.0
align = 1
valign = 1
autowrap = true

[node name="ProfileCreate" type="VBoxContainer" parent="ProfilePanel/Control"]
margin_left = 8.0
margin_top = 198.0
margin_right = 116.0
margin_bottom = 222.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileCreate"]
margin_top = 2.0
margin_right = 108.0
margin_bottom = 22.0
text = "Create Profile"

[node name="ProfileSwitch" type="VBoxContainer" parent="ProfilePanel/Control"]
margin_left = 128.0
margin_top = 198.0
margin_right = 226.0
margin_bottom = 219.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileSwitch"]
margin_right = 98.0
margin_bottom = 20.0
disabled = true
action_mode = 0
text = "Switch Profile"

[node name="ProfileEdit" type="VBoxContainer" parent="ProfilePanel/Control"]
margin_left = 236.0
margin_top = 198.0
margin_right = 344.0
margin_bottom = 222.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileEdit"]
margin_top = 2.0
margin_right = 108.0
margin_bottom = 22.0
disabled = true
text = "Edit Profile"

[node name="ProfileDelete" type="VBoxContainer" parent="ProfilePanel/Control"]
margin_left = 356.0
margin_top = 198.0
margin_right = 464.0
margin_bottom = 222.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ProfilePanel/Control/ProfileDelete"]
margin_top = 2.0
margin_right = 108.0
margin_bottom = 22.0
disabled = true
text = "Delete Profile"

[node name="NewProfileMaker" type="PopupPanel" parent="."]
margin_left = 384.0
margin_top = 144.0
margin_right = 672.0
margin_bottom = 312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="NewProfileMaker"]
margin_left = 4.0
margin_top = 4.0
margin_right = 284.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileMakerExit" type="HBoxContainer" parent="NewProfileMaker/Control"]
margin_left = 260.0
margin_top = -4.0
margin_right = 284.0
margin_bottom = 20.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="NewProfileMaker/Control/ProfileMakerExit"]
margin_left = 4.0
margin_right = 24.0
margin_bottom = 24.0
text = "X"

[node name="ProfileMakerHeader" type="VBoxContainer" parent="NewProfileMaker/Control"]
margin_left = 20.0
margin_top = 8.0
margin_right = 260.0
margin_bottom = 32.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewProfileMaker/Control/ProfileMakerHeader"]
margin_top = 5.0
margin_right = 240.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter Your Name"
align = 1
valign = 1

[node name="ProfileMakerWarning" type="VBoxContainer" parent="NewProfileMaker/Control"]
margin_left = 20.0
margin_top = 33.0
margin_right = 260.0
margin_bottom = 57.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewProfileMaker/Control/ProfileMakerWarning"]
margin_top = 5.0
margin_right = 240.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="ProfileMakerInput" type="LineEdit" parent="NewProfileMaker/Control"]
margin_left = 20.0
margin_top = 56.0
margin_right = 260.0
margin_bottom = 92.0
align = 1
max_length = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MakeProfile" type="Button" parent="NewProfileMaker/Control"]
margin_left = 92.0
margin_top = 116.0
margin_right = 190.0
margin_bottom = 140.0
text = "Create Profile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeProfile" type="Control" parent="."]
margin_left = 720.0
margin_top = 96.0
margin_right = 912.0
margin_bottom = 156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileName" type="Control" parent="ChangeProfile"]
margin_right = 192.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="ChangeProfile/ProfileName"]
margin_right = 192.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="ChangeProfile/ProfileName"]
margin_right = 192.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "New Player"
align = 1
valign = 1

[node name="ProfileButton" type="Control" parent="ChangeProfile"]
margin_top = 40.0
margin_right = 192.0
margin_bottom = 60.0

[node name="Button" type="Button" parent="ChangeProfile/ProfileButton"]
margin_right = 192.0
margin_bottom = 20.0
text = "If this is not you, click here"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Settings Button" to="." method="_on_Settings_Button_pressed"]
[connection signal="pressed" from="Exit Button" to="." method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="Settings/Control/SettingsExit/ExitSettings" to="." method="_on_SettingsExitButton_pressed"]
[connection signal="pressed" from="Settings/Control/SettingsButtons/SettingsCredits/Button" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Settings/Control/SettingsButtons/SettingsDiscord/Button" to="." method="_on_DiscordButton_pressed"]
[connection signal="pressed" from="ExitConfirmation/Control/ExitConfirm/ExitConfirmYes/Button" to="." method="_on_ExitYesButton_pressed"]
[connection signal="pressed" from="ExitConfirmation/Control/ExitConfirm/ExitConfirmNo/ExitNo" to="." method="_on_ExitNoButton_pressed"]
[connection signal="pressed" from="ProfilePanel/Control/ProfileExit/Button" to="." method="_on_ProfileExitButton_pressed"]
[connection signal="toggled" from="ProfilePanel/Control/ProfileList/Profile0/Button" to="." method="_on_ProfileZeroButton_toggled"]
[connection signal="toggled" from="ProfilePanel/Control/ProfileList/Profile1/Button" to="." method="_on_ProfileOneButton_toggled"]
[connection signal="toggled" from="ProfilePanel/Control/ProfileList/Profile2/Button" to="." method="_on_ProfileTwoButton_toggled"]
[connection signal="toggled" from="ProfilePanel/Control/ProfileList/Profile3/Button" to="." method="_on_ProfileThreeButton_toggled"]
[connection signal="toggled" from="ProfilePanel/Control/ProfileList/Profile4/Button" to="." method="_on_ProfileFourButton_toggled"]
[connection signal="pressed" from="ProfilePanel/Control/ProfileCreate/Button" to="." method="_on_CreateProfileButton_pressed"]
[connection signal="pressed" from="ProfilePanel/Control/ProfileSwitch/Button" to="." method="_onProfileSwitchButton_pressed"]
[connection signal="pressed" from="ProfilePanel/Control/ProfileEdit/Button" to="." method="_on_ProfileEditButton_pressed"]
[connection signal="pressed" from="NewProfileMaker/Control/ProfileMakerExit/Button" to="." method="_on_ExitProfileMakerButton_pressed"]
[connection signal="pressed" from="NewProfileMaker/Control/MakeProfile" to="." method="_on_MakeProfileButton_pressed"]
[connection signal="pressed" from="ChangeProfile/ProfileButton/Button" to="." method="_on_ProfileButton_pressed"]
